Add API to get own projects by creator
